footer not fixed on mobile and tablets

--- a/css/style.css
+++ b/css/style.css
@@ -150,4 +150,7 @@ footer {
     .header {
         padding-bottom: 5vh;
     }
+    footer {
+        position: initial;
+    }
 }
